# aoc_2025

./: .gitignore  Cargo.toml  perf.data  perf.data.old
aoc_util/: Cargo.toml
aoc_util/src/: lib.rs
day01/: Cargo.toml
day01/benches/: day01_benchmark.rs
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/benches/: day02_benchmark.rs
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/benches/: day03_benchmark.rs
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/benches/: day04_benchmark.rs
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/benches/: day05_benchmark.rs
day05/src/: lib.rs  main.rs
