[package]
name = "day02"
version = "0.1.0"
edition = "2024"
resolver = "2"

[profile.bench]
debug = true

[dependencies]
aoc_util = { path = "../aoc_util"}
hashbrown = "0.15.2"
rayon = "1.11.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "day02_benchmark"
harness = false
